--- a/to-do/MainWindow.xaml
+++ b/to-do/MainWindow.xaml
@@ -15,9 +15,9 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                    <CheckBox IsChecked="{Binding Check}" Content="{Binding Desc}"/>
+                        <CheckBox IsChecked="{Binding Check}" Content="{Binding Desc}"/>
                         <TextBlock Text=" | " Margin="5,0"/>
-                        <TextBlock Text="{Binding Time}"/>
+                        <TextBox IsReadOnly="False" Text="{Binding Time}"/>
                         <Button Content="Delete" Margin="10,0,0,0" Click="DeleteTodoButton_Click"/>
                     </StackPanel>
                 </DataTemplate>
